# StreamingT2V

./: .gitignore  README.md  mawe.py  pyproject.toml  requirements.txt
code/: config.yaml  inference_i2v.py
code/dataloader/: dataset_factory.py  single_image_dataset.py  video_data_module.py
code/diffusion_trainer/: abstract_trainer.py  streaming_svd.py
code/i2v_enhance/: attention.py  i2v_enhance_interface.py  pipeline_i2vgen_xl.py  transformer_2d.py  transformer_temporal.py  unet_3d_blocks.py  unet_i2vgen_xl.py
code/lib/farancia/: __init__.py  animation.py  config.py
code/models/cam/: conditioning.py
code/models/control/: controlnet.py
code/models/diffusion/: discretizer.py  video_model.py  wrappers.py
code/models/svd/sgm/: __init__.py  (+1 more)
code/modules/loader/: module_loader.py  module_loader_config.py
code/modules/params/: i2v_enhance.py  params_mixin.py  vfi.py
code/utils/: aux.py  inference_utils.py  loader.py  result_processor.py
t2v_enhanced/: __init__.py  gradio_demo.py  inference.py  inference_utils.py  model_func.py  model_init.py
t2v_enhanced/configs/inference/: inference_long_video.yaml
t2v_enhanced/configs/text_to_video/: config.yaml
t2v_enhanced/model/: callbacks.py  flags.py  pl_module_extension.py  pl_module_params_controlnet.py  requires_grad_setter.py  video_ldm.py  video_noise_generator.py
t2v_enhanced/model/datasets/: prompt_reader.py  video_dataset.py
t2v_enhanced/model/layers/: conv_channel_extension.py
t2v_enhanced/utils/: conversions.py  iimage.py  image_converter.py  object_loader.py  video_utils.py  visualisation.py
(+39 files in other folders)
